<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCategoria"
        app:layout_constraintStart_toEndOf="@+id/textViewCategoria"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategoria" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDescription"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategoria" />

    <TextView
        android:id="@+id/textViewPaymentorPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textPayorPayment"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <Switch
        android:id="@+id/switchPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"
        android:showText="true"
        android:splitTrack="false"
        android:textOff="To Pay"
        android:textOn="Paid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValue" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPaymentorPay"
        app:layout_constraintStart_toEndOf="@+id/textViewPaymentorPay"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:scaleType="center"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCategories"
        app:layout_constraintStart_toEndOf="@+id/spinnerCategories"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_add_white_18" />

    <TextView
        android:id="@+id/textViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textValue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPay" />

    <EditText
        android:id="@+id/editTextValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/textViewValue"
        app:layout_constraintStart_toEndOf="@+id/textViewValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewPay" />

    <TextView
        android:id="@+id/textViewPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewPay"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaymentorPay" />

    <EditText
        android:id="@+id/editTextDatePay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPay"
        app:layout_constraintStart_toEndOf="@+id/textViewPay"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaymentorPay" />
</android.support.constraint.ConstraintLayout>

